--- a/crystalclear/CSS/nocontainer.css
+++ b/crystalclear/CSS/nocontainer.css
@@ -38,7 +38,25 @@
 ::selection {
   color: #fff;
   background-color: var(--accent2);
-}    
+}  
+
+.searchhold h2 {
+    width:160px;
+}   
+
+.cats h2 {
+    width:300px;
+}  
+
+.pills h2 {
+    width:600px;
+}   
+
+ .choose:after {
+  content:"";
+  display: block;
+  clear: both;
+}
 
 .searchhold {
     top:0px;
