--- a/crystalclear/CSS/nojsgp.css
+++ b/crystalclear/CSS/nojsgp.css
@@ -75,13 +75,13 @@ input[type="text"] {
   font-weight:700;
   font-size:10px;
   text-transform:uppercase;
-  color:var(--second-txt-color);
+  color: var(--accent);
+  background-color:var(--second-txt-color);
   text-align:center;
   visibility: hidden;
   min-width: 120px;
   max-width: 300px;
   height:10px;
-  background-color: var(--accent);
   border-radius: 30px;
   padding: 10px 0px;
   top: 200%;
