--- a/crystalclear/gifpages/nojavascript-contained.css
+++ b/crystalclear/gifpages/nojavascript-contained.css
@@ -139,28 +139,24 @@ input[type="text"] {
   border-color: transparent transparent transparent var(--accent);
 }
 
-
-
-/* container */
-#trunk {
-    width:calc(80% - 40px);
-    height:77%;
-    margin:0 auto;
-    left:0;
-    right:0;
-    bottom:0;
-    top:140px;
-    text-align;center;
-    display:inline-block;
+/* pls dont */
+.credit {
+    padding-top:4px;
+    bottom:1%;
+    right:1%;
     position:fixed;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.05); 
-    background-color:rgba(250,250,250,0.8);
-        backdrop-filter: blur(10px);
-    border:1px solid var(--border-color);
-    border-radius:5px;
-    padding-left:20px;
-    padding-right:20px;
-    
+    z-index:111;
+    font-style: normal;
+}   
+
+.credit a {
+    color:var(--accent);
+} 
+
+.credit a:hover {
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -o-transition: all .3s;
+    -ms-transition: all .3s;    
+    transition: all .3s;
 }
