--- a/crystalclear/gifpages/nojavascript-contained.css
+++ b/crystalclear/gifpages/nojavascript-contained.css
@@ -139,6 +139,30 @@ input[type="text"] {
   border-color: transparent transparent transparent var(--accent);
 }
 
+/* container */
+#trunk {
+    width:calc(80% - 40px);
+    height:77%;
+    margin:0 auto;
+    left:0;
+    right:0;
+    bottom:0;
+    top:140px;
+    text-align;center;
+    display:inline-block;
+    position:fixed;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.05); 
+    background-color:rgba(250,250,250,0.8);
+        backdrop-filter: blur(10px);
+    border:1px solid var(--border-color);
+    border-radius:5px;
+    padding-left:20px;
+    padding-right:20px;
+    
+}
+
 /* pls dont */
 .credit {
     padding-top:4px;
