--- a/crystalclear/gifpages/no-js.css
+++ b/crystalclear/gifpages/no-js.css
@@ -139,6 +139,48 @@ input[type="text"] {
   border-color: transparent transparent transparent var(--accent);
 }
 
+#trunk {
+    margin:0 auto;
+    left:0;
+    right:0;
+    bottom:0;
+    text-align;center;
+    display:inline-block;
+    position:fixed;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background-color:rgba(250,250,250,0.8);
+        backdrop-filter: blur(10px);
+}
+
+/* no container */
+.uncontained {
+    width:calc(100% - 200px);
+    height:calc(100% - 160px);
+    top:0px;
+    border-radius:0px;
+    padding-top:140px;
+    padding-bottom:150px;
+    padding-left:100px;
+    padding-right:100px;
+    
+}
+
+/* container */
+.contained {
+    width:calc(80% - 40px);
+    height:77%;
+    top:140px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.05); 
+    background-color:rgba(250,250,250,0.8);
+    border-radius:5px;
+    padding-top:0px;
+    padding-bottom:20px;
+    padding-left:20px;
+    padding-right:20px;
+    
+}
+
 /* pls dont */
 .credit {
     padding-top:4px;
