--- a/goodthingsgobad/directories/css/light.css
+++ b/goodthingsgobad/directories/css/light.css
@@ -53,44 +53,6 @@ background: var(--accent2);
 
 /* tooltiiiiips */
 
-.tooltip {
-  position: relative;
-  display: inline-block;
-}
-
-.tooltip .tooltiptext {
-  font-family:'karla';
-  font-weight:700;
-  font-size:10px;
-  text-transform:uppercase;
-  color: var(--main-txt-color);
-  background-color:var(--second-txt-color);
-  text-align:center;
-  visibility: hidden;
-  height:10px;
-  border-radius: 30px;
-  top: -10px;
-  right: 350%;
-  margin-left: -60px;
-  opacity: 0;
-  transition: opacity 1s;
-  padding-bottom:10px;
-  border:1px solid var(--border-color);
-}
-
-.tooltiptext {
-  width: max-content; 
-  max-width: 200px;
-  position: absolute;
-  padding: 10px;
-  z-index: 9999;
-}
-
-.tooltip:hover .tooltiptext {
-  visibility: visible;
-  opacity: 1;
-}
-
 /* filter tooltip*/
 
 .tooltipfilter {
@@ -130,6 +92,44 @@ background: var(--accent2);
   visibility: visible;
   opacity: 1;
   
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  font-family:'karla';
+  font-weight:700;
+  font-size:10px;
+  text-transform:uppercase;
+  color: var(--main-txt-color);
+  background-color:var(--second-txt-color);
+  text-align:center;
+  visibility: hidden;
+  height:10px;
+  border-radius: 30px;
+  top: -10px;
+  right: 350%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 1s;
+  padding-bottom:10px;
+  border:1px solid var(--border-color);
+}
+
+.tooltiptext {
+  width: max-content; 
+  max-width: 200px;
+  position: absolute;
+  padding: 10px;
+  z-index: 9999;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
 }
 
 /* credit tooltip*/
@@ -310,6 +310,7 @@ svg:hover {
   
  #background {
       top:0;
+      left:0
       height:100%;
   }
 
@@ -351,8 +352,9 @@ svg:hover {
   
  #background {
       top:0;
+      left:0
       height:100%;
-  }  
+  }
   
 }
 
