--- a/picturesofgirls/picturesofgirls.css
+++ b/picturesofgirls/picturesofgirls.css
@@ -80,7 +80,7 @@ background: var(--main-txt-color);
     height:100%;
     top:0;
     margin-left:calc(60% + 20px);
-    text-align;center;
+    text-align:center;
     position:absolute;
     display:inline-block;
     z-index:11;
@@ -261,7 +261,7 @@ background: var(--main-txt-color);
     border:1px solid var(--second-txt-color);
     overflow-y:scroll;
     overflow-x:hidden;
-    z-index:9;
+    z-index:1111;
 }
 
 
