--- a/picturesofgirls/picturesofgirls.css
+++ b/picturesofgirls/picturesofgirls.css
@@ -79,7 +79,7 @@ background: var(--main-txt-color);
     width:calc(40% - 20px);
     height:100%;
     top:0;
-    margin-left:calc(60% + 20px);
+    margin-left:calc(60% + 42px);
     text-align:center;
     position:absolute;
     display:inline-block;
@@ -95,9 +95,9 @@ background: var(--main-txt-color);
     bottom:0;
     left:0;
     margin-top:250px;
-    padding-left:20px;
+    left:-20px;
     position:relative;
-    text-align;center;
+    text-align:center;
     z-index:11;
     vertical-align:center;
 }
